--- a/root/frontend/thankunext/src/App.css
+++ b/root/frontend/thankunext/src/App.css
@@ -1,4 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 .App {
   text-align: center;
+}
+
+.Title{
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
 }
 
